added vanilla js client side functionality to view all items, update cart and retrieve invoice

--- a/PerfectChannelShoppingCart/index.html
+++ b/PerfectChannelShoppingCart/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="/scripts/bootstrap.min.css"/>
     <link rel="stylesheet" href="/scripts/index.css" />
     <meta charset="utf-8" />
+    <style>
+        .panel-resizable {
+            resize: vertical;
+            overflow: auto;
+        }
+    </style>
 </head>
 <body>
 
